Adding the admin pannel

--- a/templates/admin/admin_login.html
+++ b/templates/admin/admin_login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "frontend/pages/index.html" %}
 {% block content %}
 <div class="admin-login-wrap">
   <div class="card admin-card">
