--- a/templates/admin/admin_menu_edit.html
+++ b/templates/admin/admin_menu_edit.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 {% block content %}
 <div class="container">
   <a href="/admin/dashboard" class="btn secondary">← Back</a>
