--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 
 </head>
 <body>
@@ -20,19 +20,19 @@
 
     <nav class="navbar">
         <a class="active" href="#">home</a>
-        <a href="./dish.html">dishes</a>
+        <a href="dish.html">dishes</a>
         <a href="#">about</a>
-        <a href="./menu.html">menu</a>
-        <a href="./review.html">review</a>
-        <a href="./order.html">order</a>
+        <a href="menu.html">menu</a>
+        <a href="review.html">review</a>
+        <a href="order.html">order</a>
     </nav>
 
     <div class="icons">
         <i class="fas fa-bars" id="menu-bars"></i>
         <i class="fas fa-search" id="search-icon"></i>
         <a href="#" class="fas fa-heart"></a>
-        <a href="./cart.html" class="fas fa-shopping-cart" id="open-cart"><span id="cart-count" class="cart-badge">0</span></a>
-        <a href="./login.html" class="fas fa-user"></a>
+        <a href="cart.html" class="fas fa-shopping-cart" id="open-cart"><span id="cart-count" class="cart-badge">0</span></a>
+        <a href="login.html" class="fas fa-user"></a>
     </div>
 </header>
 
@@ -61,7 +61,7 @@
                     <a href="#" class="btn">order now</a>
                 </div>
                 <div class="image">
-                    <img src="../assets/image/home-img-1.png" alt="">
+                    <img src="../static/assets/image/home-img-1.png" alt="">
                 </div>
             </div>
 
@@ -73,7 +73,7 @@
                     <a href="#" class="btn">order now</a>
                 </div>
                 <div class="image">
-                    <img src="../assets/image/home-img-2.png" alt="">
+                    <img src="../static/assets/image/home-img-2.png" alt="">
                 </div>
             </div>
 
@@ -85,7 +85,7 @@
                     <a href="#" class="btn">order now</a>
                 </div>
                 <div class="image">
-                    <img src="../assets/image/home-img-3.png" alt="">
+                    <img src="../static/assets/image/home-img-3.png" alt="">
                 </div>
             </div>
 
@@ -260,7 +260,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="../assets/image/menu-1.jpg" alt="">
+                <img src="../static/assets/image/menu-1.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -280,7 +280,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="../assets/image/menu-2.jpg" alt="">
+                <img src="../static/assets/image/menu-2.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -300,7 +300,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="../assets/image/menu-3.jpg" alt="">
+                <img src="../static/assets/image/menu-3.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -320,7 +320,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="../assets/image/menu-4.jpg" alt="">
+                <img src="../static/assets/image/menu-4.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -340,7 +340,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="../assets/image/menu-5.jpg" alt="">
+                <img src="../static/assets/image/menu-5.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -360,7 +360,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="../assets/image/menu-6.jpg" alt="">
+                <img src="../static/assets/image/menu-6.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -380,7 +380,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="../assets/image/menu-7.jpg" alt="">
+                <img src="../static/assets/image/menu-7.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -400,7 +400,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="../assets/image/menu-8.jpg" alt="">
+                <img src="../static/assets/image/menu-8.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -420,7 +420,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="../assets/image/menu-9.jpg" alt="">
+                <img src="../static/assets/image/menu-9.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
