--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login/Signup Form</title>
-     <link rel="stylesheet" href="../css/login.css">
+     <link rel="stylesheet" href="../static/css/login.css">
      <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -72,6 +72,6 @@
       </div>
     </div>
 
-    <script src="../js/login.js"></script>
+    <script src="../static/js/login.js"></script>
   </body>
 </html>
