--- a/templates/order.html
+++ b/templates/order.html
@@ -7,20 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Website </title>
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
 
     <!-- header section starts      -->
 <header>
- <a href="./index.html" class="logo"><i class="fas fa-utensils"></i>resto.</a>
+ <a href="index.html" class="logo"><i class="fas fa-utensils"></i>resto.</a>
 
     <nav class="navbar">
-        <a href="./index.html">home</a>
-        <a href="./dish.html">dishes</a>
+        <a href="index.html">home</a>
+        <a href="dish.html">dishes</a>
         <a href="#">about</a>
-        <a href="./menu.html">menu</a>
-        <a href="./review.html">review</a>
+        <a href="menu.html">menu</a>
+        <a href="review.html">review</a>
         <a class="active" href="./order.html">order</a>
     </nav>
 
@@ -29,7 +29,7 @@
         <i class="fas fa-search" id="search-icon"></i>
         <a href="#" class="fas fa-heart"></a>
         <a href="#" class="fas fa-shopping-cart"></a>
-        <a href="./login.html" class="fas fa-user"></a>
+        <a href="login.html" class="fas fa-user"></a>
     </div>
 </header>
 
@@ -101,7 +101,7 @@
 
 </section>
 
-<script src="../js/order.js"></script>
+<script src="../static/js/order.js"></script>
 
 </body>
 
