--- a/templates/review.html
+++ b/templates/review.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 
 
 </head>
@@ -20,12 +20,12 @@
  <a href="#" class="logo"><i class="fas fa-utensils"></i>resto.</a>
 
     <nav class="navbar">
-        <a href="./index.html">home</a>
-        <a href="./dish.html">dishes</a>
+        <a href="index.html">home</a>
+        <a href="dish.html">dishes</a>
         <a href="#">about</a>
-        <a href="./menu.html">menu</a>
+        <a href="menu.html">menu</a>
         <a class="active" href="./review.html">review</a>
-        <a href="./order.html">order</a>
+        <a href="order.html">order</a>
     </nav>
 
     <div class="icons">
@@ -33,7 +33,7 @@
         <i class="fas fa-search" id="search-icon"></i>
         <a href="#" class="fas fa-heart"></a>
         <a href="#" class="fas fa-shopping-cart"></a>
-        <a href="./login.html" class="fas fa-user"></a>
+        <a href="login.html" class="fas fa-user"></a>
     </div>
 </header>
 
