--- a/templates/menu.html
+++ b/templates/menu.html
@@ -237,6 +237,56 @@
 
 <!-- menu section ends -->
 
+<!-- footer section start -->
+
+<section class="footer">
+
+    <div class="box-container">
+
+        <div class="box">
+            <h3>locations</h3>
+            <a href="#">Helsinki</a>
+            <a href="#">Vanta</a>
+            <a href="#">Espoo </a>
+            <a href="#">Kaunian</a>
+            <a href="#">Hamelinna</a>
+        </div>
+
+        <div class="box">
+            <h3>quick links</h3>
+            <a href="#">home</a>
+            <a href="#">dishes</a>
+            <a href="#">about</a>
+            <a href="#">menu</a>
+            <a href="#">reivew</a>
+            <a href="#">order</a>
+        </div>
+
+        <div class="box">
+            <h3>contact info</h3>
+            <a href="#">+358402457337</a>
+            <a href="#">+358449314564</a>
+            <a href="#">olisagarsandesh@gmail.com</a>
+            <a href="#">mahendragautamsharma@gmail.com</a>
+            <a href="#">Kirstintie 30 C, Espoo , 02760/a>
+        </div>
+
+        <div class="box">
+            <h3>follow us</h3>
+            <a href="#">facebook</a>
+            <a href="#">twitter</a>
+            <a href="#">instagram</a>
+            <a href="#">linkedin</a>
+        </div>
+
+    </div>
+
+    <div class="credit"> copyright @ 2025 by <span> Backlol team</span> </div>
+
+</section>
+
+<!--footer section end-->
+
 </body>
 
 </html>
