--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
         <i class="fas fa-search" id="search-icon"></i>
         <a href="#" class="fas fa-heart"></a>
         <a href="cart.html" class="fas fa-shopping-cart" id="open-cart"><span id="cart-count" class="cart-badge">0</span></a>
-        <a href="login.html" class="fas fa-user"></a>
+        <a href="/login" class="fas fa-user"></a>
     </div>
 </header>
 
