--- a/templates/login.html
+++ b/templates/login.html
@@ -13,10 +13,10 @@
   <body>
     <div class="container">
       <div class="form-box login">
-        <form action="#">
+        <form action="/login" method="POST">
           <h1>Login</h1>
           <div class="input-box">
-            <input type="text" placeholder="Username" required />
+            <input type="email" name placeholder="Email" required />
             <i class="bx bxs-user"></i>
           </div>
           <div class="input-box">
