--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -193,7 +193,7 @@ body {
     display: none;
     position: absolute;
     right: 0;
-    background-color: var(--primary); /* match your topbar */
+    background-color: var(--primary);
     color: white;
     min-width: 150px;
     box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
