--- a/templates/login.html
+++ b/templates/login.html
@@ -9,44 +9,87 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+
+     <style>
+    .alert.error {
+      color: #fff;
+      background: #ff4d4d;
+      padding: 10px;
+      border-radius: 5px;
+      margin-bottom: 15px;
+      position: absolute;
+      top: 20px;
+      right: 20px;
+    }
+
+    .alert.success {
+      color: #fff;
+      background: #33f163;
+      padding: 10px;
+      border-radius: 5px;
+      margin-bottom: 15px;
+      position: absolute;
+      top: 20px;
+      right: 20px;
+    }
+  </style>
+
   </head>
   <body>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+  <div id="flash-messages">
+    {% for category, message in messages %}
+    <div class="alert {{ category }}">
+      {{ message }}
+    </div>
+    {% endfor %}
+  </div>
+  {% endif %}
+  {% endwith %}
     <div class="container">
       <div class="form-box login">
-        <form action="/login" method="POST">
+        <form action="/user/login" method="POST">
+
           <h1>Login</h1>
           <div class="input-box">
-            <input type="email" name placeholder="Email" required />
+            <input type="email" name="email" placeholder="Email" required />
             <i class="bx bxs-user"></i>
           </div>
           <div class="input-box">
-            <input type="password" placeholder="Password" required />
+            <input type="password" name="password" placeholder="Password" required />
             <i class="bx bxs-lock-alt"></i>
           </div>
-          <div class="forgot-link">
+          <!-- <div class="forgot-link">
             <a href="#">Forgot Password?</a>
-          </div>
+          </div> -->
           <button type="submit" class="btn">Login</button>
-          <p>or login with social platforms</p>
-          <div class="social-icons">
+          <!-- <p>or login with social platforms</p> -->
+          <!-- <div class="social-icons">
             <a href="#"><i class="bx bxl-google"></i></a>
-          </div>
+          </div> -->
         </form>
       </div>
 
       <div class="form-box register">
-        <form action="#">
+        <form action="/register" method="POST">
+
+      
           <h1>Registration</h1>
           <div class="input-box">
-            <input type="text" placeholder="Username" required />
+            <input type="text" name="first_name" placeholder="First Name" required />
             <i class="bx bxs-user"></i>
           </div>
           <div class="input-box">
-            <input type="email" placeholder="Email" required />
+            <input type="text" name="last_name" placeholder="Last Name" required />
+            <i class="bx bxs-user"></i>
+          </div>
+          <div class="input-box">
+            <input type="email" name="email" placeholder="Email" required />
             <i class="bx bxs-envelope"></i>
           </div>
           <div class="input-box">
-            <input type="password" placeholder="Password" required />
+            <input type="password" name="password" placeholder="Password" required />
             <i class="bx bxs-lock-alt"></i>
           </div>
           <button type="submit" class="btn">Register</button>
@@ -73,5 +116,14 @@
     </div>
 
     <script src="../static/js/login.js"></script>
+    <script>
+      setTimeout(() => {
+        const flashBox = document.getElementById('flash-messages');
+        if (flashBox) {
+          flashBox.style.animation = "fadeOut 1s forwards";  
+          setTimeout(() => flashBox.remove(), 1000); 
+        }
+      }, 3000);
+    </script>
   </body>
 </html>
