--- a/templates/admin/admin_dashboard.html
+++ b/templates/admin/admin_dashboard.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../static/css/admin.css">
 </head>
 
-<body>
+<body data-section="{{ section }}">
 
     <!-- SIDEBAR -->
     <aside class="sidebar" id="sidebar">
@@ -19,7 +19,7 @@
         <a href="#" class="active" data-section="dashboard"><span class="material-icons">dashboard</span>Dashboard</a>
         <a href="#" data-section="orders"><span class="material-icons">shopping_cart</span>Orders</a>
         <a href="#" data-section="menu"><span class="material-icons">menu_book</span>Menu</a>
-        <a href="#" data-section="users"><span class="material-icons">people</span>Users</a>
+        <a href="/admin/users" data-section="users"><span class="material-icons">people</span>Users</a>
         <a href="#" data-section="reviews"><span class="material-icons">comment</span>Reviews</a>
     </aside>
 
@@ -86,7 +86,21 @@
 
             <!-- Users Section -->
             <div id="users" class="section-page">
-                <h2>User Management</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>S.N</th>
+                            <th>User Name</th>
+                            <th>Email</th>
+                            <th>Role</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+
+                    <tbody id="users-table">
+
+                    </tbody>
+                </table>
             </div>
 
 
