changes in html index file

--- a/templates/index.html
+++ b/templates/index.html
@@ -649,7 +649,7 @@
                 <a href="#">+358449314564</a>
                 <a href="#">olisagarsandesh@gmail.com</a>
                 <a href="#">mahendragautamsharma@gmail.com</a>
-                <a href="#">Kirstintie 30 C, Espoo , 02760/a>
+                <a href="#">Kirstintie 30 C, Espoo , 02760</a>
             </div>
 
             <div class="box">
@@ -662,7 +662,7 @@
 
         </div>
 
-        <div class="credit"> copyright @ 2025 by <span> Backlol team</span> </div>
+        <div class="credit"> copyright @ 2025 by <span> Metropolia Student</span> </div>
 
     </section>
 
