--- a/templates/admin/admin_dashboard.html
+++ b/templates/admin/admin_dashboard.html
@@ -18,7 +18,7 @@
         <h2>Admin Panel</h2>
         <a href="#" class="active" data-section="dashboard"><span class="material-icons">dashboard</span>Dashboard</a>
         <a href="/admin/dishes" data-section="dishes"><span class="material-icons">local_dining</span>Dishes</a>
-        <a href="#" data-section="menu"><span class="material-icons">menu_book</span>Menu</a>
+        <a href="/admin/menu" data-section="menu"><span class="material-icons">menu_book</span>Menu</a>
         <a href="#" data-section="orders"><span class="material-icons">shopping_cart</span>Orders</a>
         <a href="/admin/users" data-section="users"><span class="material-icons">people</span>Users</a>
         <a href="#" data-section="reviews"><span class="material-icons">comment</span>Reviews</a>
@@ -105,7 +105,7 @@
             <div id="dish-modal" class="modal">
                 <div class="modal-content">
                     <h3>Add New Dish</h3>
-
+<br>
                     <form id="dish-form">
 
                         <label>Dish Name</label>
@@ -133,7 +133,7 @@
             <div class="modal" id="editDishModal">
                 <div class="modal-content">
                     <h2>Edit Dish</h2>
-
+<br>
                     <form id="editDishForm">
                         <input type="hidden" id="editDishId">
 
@@ -323,10 +323,11 @@
             <div id="menuModal" class="modal">
                 <div class="modal-content">
                     <h3>Add Dish to <span id="modalDay"></span></h3>
+                    <br>
                     <form id="menuForm">
                         <label>Dish</label>
-                        <select id="modalDishSelect" name="dish" required>
-                            <!-- Options will be dynamically loaded from /api/dishes -->
+                        <select id="modalDishSelect" class="menu-select" name="dish" required>
+
                         </select>
 
                         <div class="modal-buttons">
