session updated for apis

--- a/templates/dish.html
+++ b/templates/dish.html
@@ -20,7 +20,7 @@
 
     <nav class="navbar">
         <a href="index.html">home</a>
-        <a class="active" href="./dish.html">dishes</a>
+        <a class="active" href="/dishes">dishes</a>
         <a href="#">about</a>
         <a href="menu.html">menu</a>
         <a href="review.html">review</a>
