--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 
     <nav class="navbar">
         <a class="active" href="#">home</a>
-        <a href="dish.html">dishes</a>
+        <a href="/dishes">dishes</a>
         <a href="#">about</a>
         <a href="menu.html">menu</a>
         <a href="review.html">review</a>
@@ -623,7 +623,7 @@
             <a href="#">+358402457337</a>
             <a href="#">+358449314564</a>
             <a href="#">olisagarsandesh@gmail.com</a>
-            <a href="#">mahendragautamsharma@gmail.com</a>
+            <a href="#">mahendra.sharma@metropolia.fi</a>
             <a href="#">Kirstintie 30 C, Espoo , 02760/a>
         </div>
 
@@ -637,7 +637,7 @@
 
     </div>
 
-    <div class="credit"> copyright @ 2025 by <span> Backlol team</span> </div>
+    <div class="credit"> copyright @ 2025 by <span> Metropolia Student</span> </div>
 
 </section>
 
@@ -649,24 +649,6 @@
     <script src="/js/cart.js"></script>
     <script src="/js/order.js"></script>
     <script src="/js/animations.js"></script>
-
-
-<script>
-  // function to load another HTML file
-  function loadHTML(targetID, filePath) {
-    fetch(filePath)
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById(targetID).innerHTML = data;
-      })
-      .catch(err => console.error('Error loading file:', filePath, err));
-  }
-
-  // Load your other HTML files here
-  loadHTML("dishes", "dish.html");
-//   loadHTML("file2", "contact.html");
-//   loadHTML("file3", "services.html");
-</script>
 
 <script>
     document.getElementById("close-cart").addEventListener("click", () => {
